--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "@types/secp256k1": "^4.0.6",
     "axios": "^1.7.7",
     "compression": "^1.7.5",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.21.1",
-    "express-rate-limit": "^7.4.1"
+    "express-rate-limit": "^7.4.1",
+    "secp256k1": "^5.0.1"
   }
 }
