--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "@grpc/grpc-js": "^1.12.2",
+    "@grpc/proto-loader": "^0.7.13",
     "@types/secp256k1": "^4.0.6",
     "axios": "^1.7.7",
     "compression": "^1.7.5",
@@ -18,6 +20,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "express-rate-limit": "^7.4.1",
+    "grpc": "^1.24.11",
+    "lightning": "^10.22.1",
     "secp256k1": "^5.0.1"
   }
 }
