--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "@grpc/grpc-js": "^1.12.2",
     "@grpc/proto-loader": "^0.7.13",
     "@types/eslint__js": "^8.42.3",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/secp256k1": "^4.0.6",
     "axios": "^1.7.7",
     "compression": "^1.7.5",
@@ -24,6 +25,7 @@
     "express": "^4.21.1",
     "express-rate-limit": "^7.4.1",
     "grpc": "^1.24.11",
+    "jsonwebtoken": "^9.0.2",
     "lightning": "^10.22.1",
     "secp256k1": "^5.0.1",
     "typescript-eslint": "^8.13.0"
