--- a/server/package.json
+++ b/server/package.json
@@ -3,6 +3,7 @@
   "module": "index.ts",
   "type": "module",
   "devDependencies": {
+    "@flydotio/dockerfile": "^0.5.9",
     "@types/compression": "^1.7.5",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0"
@@ -18,13 +19,16 @@
     "@types/jsonwebtoken": "^9.0.7",
     "@types/secp256k1": "^4.0.6",
     "axios": "^1.7.7",
+    "body-parser": "^1.20.3",
     "compression": "^1.7.5",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "eslint": "^9.14.0",
     "express": "^4.21.1",
     "express-rate-limit": "^7.4.1",
+    "express-validator": "^7.2.0",
     "grpc": "^1.24.11",
+    "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
     "lightning": "^10.22.1",
     "secp256k1": "^5.0.1",
