--- a/server/package.json
+++ b/server/package.json
@@ -31,6 +31,7 @@
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
     "lightning": "^10.22.1",
+    "pino": "^9.5.0",
     "secp256k1": "^5.0.1",
     "typescript-eslint": "^8.13.0"
   }
